[gd_scene load_steps=10 format=3 uid="uid://doc5e7niq0fjc"]

[ext_resource type="Script" path="res://Objects/WorldObjects/Gate/CheckpointGate.gd" id="1_6e5js"]
[ext_resource type="Texture2D" uid="uid://da43jxfccypot" path="res://Assets/Sprites/Objects/BrickSlab.png" id="2_nx14c"]
[ext_resource type="PackedScene" uid="uid://c4ryc8tsnc78p" path="res://SoundEffects/SoundObjects/SoundPlayer.tscn" id="3_fgheb"]
[ext_resource type="AudioStream" uid="uid://seqffk5ap5mw" path="res://SoundEffects/GateOpen.wav" id="4_7iqlt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xq57"]
size = Vector2(6, 24)

[sub_resource type="Animation" id="Animation_ebnh1"]
resource_name = "Close"
length = 0.8
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-25, -0.25, 0, 0.25, 0, 2.08165e-12, 0, 2.08165e-12, 2.08165e-12, 2.08165e-12, -6, -0.25, 0, 0.25, 0, 2.08165e-12, 0, 2.08165e-12, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8)
}

[sub_resource type="Animation" id="Animation_4fsby"]
resource_name = "Open"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, -5), Vector2(2.08165e-12, -5), Vector2(2.08165e-12, -25)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GateOpen")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1.0, 1.0],
"method": &"playSound"
}]
}

[sub_resource type="Animation" id="Animation_rvij4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2.08165e-12, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4gtd5"]
_data = {
"Close": SubResource("Animation_ebnh1"),
"Open": SubResource("Animation_4fsby"),
"RESET": SubResource("Animation_rvij4")
}

[node name="CheckpointGate" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_6e5js")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_3xq57")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D/CollisionShape2D"]
z_index = -1
texture_filter = 1
texture = ExtResource("2_nx14c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../StaticBody2D")
libraries = {
"": SubResource("AnimationLibrary_4gtd5")
}

[node name="GateOpen" parent="." instance=ExtResource("3_fgheb")]
stream = ExtResource("4_7iqlt")
volumeAdd = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="StaticBody2D" method="_on_animation_player_animation_finished"]
